# gearbox

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  action.yml  mkdocs.yml  pyproject.toml
.claude/skills/cloc/: SKILL.md
.claude/skills/ctx7/: SKILL.md
.claude/skills/deptry/: SKILL.md
.github/: dependabot.yml
.github/tools/: create-issue.sh
.github/workflows/: audit.yml  auto-merge.yml  backlog.yml  ci.yml  cleanup.yml  dispatch.yml  docs.yml  release-marketplace.yml  reusable-audit.yml  reusable-implement.yml  reusable-review.yml  reusable-triage.yml  review.yml  triage.yml
actions/_lib/: validate.sh
actions/_runtime/: action.yml
actions/_setup/: action.yml
actions/audit/: action.yml
actions/backlog/: action.yml
actions/ci-fix/: action.yml
actions/cleanup/: action.yml
actions/dispatch/: action.yml
actions/implement/: action.yml
actions/main/: action.yml
actions/matrix/: action.yml
actions/publish/: action.yml
actions/review/: action.yml
actions/triage/: action.yml
actions/workflow-entry/: action.yml
docs/: changelog.md  development.md  getting-started.md  github-actions.md  index.md  roadmap.md  usage.md
docs/examples/: example-workflow-minimal.yml  example-workflow.yml
docs/research/: architecture.md  claude-code-actions.md  composite-actions.md  flywheel-workflow.md  security-governance.md
src/gearbox/: __init__.py  __main__.py  audit.py  cleanup.py  cli.py  cli_agent.py  gh.py  release.py
src/repo_auditor/: __main__.py  audit.py  cli.py  publish.py
tests/: conftest.py  test_agents.py  test_artifacts.py  test_audit.py  test_backlog_agent.py  test_cleanup.py  test_cli.py  test_commands_shared.py  test_community_docs.py  test_config.py  test_config_extended.py  test_dependencies.py  test_evaluator.py  test_fix.py  test_flow.py  test_gh.py  test_gh_extended.py  test_git.py  test_release.py  test_retry.py  test_runtime_extended.py  test_scanner.py  test_schema_audit.py  test_schema_version.py  test_sdk_logging.py  test_selection.py  test_shared.py  test_tools.py  test_workflows.py
(+67 files in other folders)
